# midgard

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  L2_TX_EVALUATION_CURRENT.md  L2_TX_EVALUATION_SPEC_PLAN.md  MIDGARD_TX_FORMAT_V1.md  README.md  TX_SCRIPT_EVALUATION_TEST_ASSURANCE_PLAN.md  plutus.json
.github/workflows/: aiken-ci.yml  midgard-node-ci.yml
cddl-files/: codec.cddl
demo/: .dockerignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
demo/lucid-midgard/: README.md  package.json  tsconfig.json
demo/midgard-core/: MIDGARD_OUTPUT_CODEC_PLAN.md  README.md  package.json  tsconfig.json
demo/midgard-manager/: pnpm-lock.yaml  pnpm-workspace.yaml
demo/midgard-node/: .dockerignore  .env.example  .env.tx-validation-branch  .gitignore  DATA_STORAGE.md  Dockerfile  PROCESS_LOGIC.md  PRODUCTION_READINESS_REPORT.md  README.md  STAGING_ONLY_TABLE_ROLES.md  TX_VALIDATION_TABLE_ROLES.md  docker-compose.dev.yaml  docker-compose.kupmios.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  tmp-check-registered-datum.mjs  tmp-print-contract-scripts.ts  tsconfig.json  tsup.config.ts  vitest.bench.config.ts  vitest.config.ts
demo/midgard-node-go/: .gitignore  README.md  go.mod  go.sum  main.go
demo/midgard-sdk/: .dockerignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.conig.ts
demo/midgard-ts/: package-lock.json  package.json
demo/midgard-validation/: package.json  tsconfig.json  vitest.config.ts
demo/schemes/: merkle-tree.md  merkle_tree.excalidraw  merkle_tree.md
docs/lucid-midgard/: 00-context-and-non-goals.md  01-public-api.md  02-native-transaction-model.md  03-builder-state-machine.md  04-provider-and-wallet.md  05-balancing-fees-and-coin-selection.md  06-scripts-redeemers-and-indexing.md  07-validation-and-simulation.md  08-submission-and-observability.md  09-testing-and-conformance.md  10-subagent-orchestration.md  11-api-parity-map.md  README.md  T00-execution-decisions.md
lib/midgard/: ledger-state.ak  reserve.ak
lib/uplc/: machine.ak  tweaked_machine.ak
non-tech-docs/: midgard-non-technical.typ
offchain/: cabal.project  midgard-offchain.cabal
offchain/midgard-node/: README.md  docker-compose.yaml  flake.nix  package.json  pnpm-lock.yaml  prometheus.yml
offchain/midgard-tx-generator/: README.md
offchain/tests/: Spec.hs
onchain/aiken/: .gitignore  aiken.toml  plutus.json
onchain/plutarch/: README.md  midgard-merkle.cabal
onchain/plutarch/app/: Main.hs
onchain/plutarch/compiled/: scriptExample.json
onchain/plutarch/src/: Profile.hs
onchain/plutarch/src/Midgard/: Utils.hs
onchain/plutarch/src/Types/: Classes.hs  Constants.hs  Membership.hs  StateCommitment.hs
onchain/plutarch/src/Validators/: Membership.hs
onchain/plutarch/test/: Main.hs
onchain/plutarch/test/Testing/Midgard/: Utils.hs
onchain/plutarch/tests/: Test.hs
onchain/plutarch/tests/Testing/: Crypto.hs  Eval.hs  MembershipValidator.hs  MerklePatriciaForestry.hs  ScriptContextBuilder.hs  TransactionProofs.hs
prerequisites/: .env.example
scripts/: generate-user-events-witness-script-prefix.sh
technical-spec/: README.md
technical-spec/1-ledger-state/: 2-utxo-set.tex  4-withdrawal-event.tex  5-transaction-order-event.tex  6-transaction.tex  7-confirmed-state.tex
technical-spec/2-user-event-protocol/: 1-deposit.tex
technical-spec/3-consensus-protocol/: 2-operator-directory.tex  3-scheduler.tex  4-state-queue.tex  6-settlement.tex  7-reserve.tex  8-hub-oracle.tex
technical-spec/5-ledger-rules/: 1-cardano-ledger-rules.tex
technical-spec/7-phase-two-validation/: 1-state-representation.tex  2-decoding-off-chain.tex
technical-spec/A-general-data-structures/: 1-linked-list.tex
technical-spec/B-l1-transactions/: 0-chapter.tex
validators/: reserve.ak
(+719 files in other folders)
